# multilspy

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish-to-pypi.yaml  rust-build-and-test.yml  rust-build.yml  test-workflow.yaml
docs/: performance-report.md
docs/superpowers/plans/: 2026-04-11-multilspy-rust-port-plan.md
docs/superpowers/specs/: 2026-04-11-multilspy-rust-port-design.md
rust/: Cargo.toml  README.md  fn-trait-prompt.md
rust/benches/: Cargo.toml  benchmark.rs
rust/multilspy-cli/: Cargo.toml
rust/multilspy-cli/src/: daemon.rs  error.rs  ipc.rs  lifecycle.rs  main.rs  position_utils.rs
rust/multilspy-cli/src/commands/: definition.rs  document_symbols.rs  implementation.rs  incoming_calls.rs  incoming_calls_recursive.rs  mod.rs  outgoing_calls.rs  outgoing_calls_recursive.rs  references.rs  server.rs  type_definition.rs  utils.rs
rust/multilspy-cli/src/daemon/: manager.rs  mod.rs  pid_file.rs  port_file.rs
rust/multilspy-cli/src/ipc/: client.rs  server.rs  types.rs
rust/multilspy-cli/tests/: cli_tests.rs
rust/multilspy-protocol/: Cargo.toml
rust/multilspy-protocol/src/: error.rs  json_rpc.rs  lib.rs  transport.rs
rust/multilspy-protocol/src/protocol/: common.rs  mod.rs  requests.rs  responses.rs
rust/multilspy-protocol/tests/: protocol_tests.rs
rust/multilspy-rust/: Cargo.toml  ra_initialize_params.json
rust/multilspy-rust/src/: client.rs  config.rs  error.rs  lib.rs  logic.rs  server.rs
rust/multilspy-rust/src/server/: handlers.rs
rust/multilspy-rust/test-rust-project/: Cargo.toml
rust/multilspy-rust/test-rust-project/src/: main.rs
rust/multilspy-rust/tests/: client_tests.rs
src/multilspy/: language_server.py  multilspy_logger.py
src/multilspy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/multilspy/language_servers/clangd_language_server/: clangd_language_server.py
src/multilspy/language_servers/dart_language_server/: dart_language_server.py
src/multilspy/language_servers/jedi_language_server/: initialize_params.json
src/multilspy/language_servers/omnisharp/: omnisharp.py
src/multilspy/language_servers/rust_analyzer/: initialize_params.json  rust_analyzer.py
src/multilspy/lsp_protocol_handler/: lsp_requests.py  server.py
src/multilspy_cli/: __init__.py  cli.py  client.py  position_utils.py  server.py
tests/multilspy/: test_multilspy_cli.py  test_multilspy_kotlin.py  test_multilspy_rust.py  test_sync_multilspy_kotlin.py
