[workspace]
members = [
    "multilspy-protocol",
    "multilspy-rust",
    "multilspy-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Your Name"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
axum = "0.7"
reqwest = { version = "0.12", features = ["json"] }
criterion = "0.5"
