[workspace]
members=[
    "multilspy-protocol",
    "multilspy-rust",
    "multilspy-cli",
]
resolver="2"

[workspace.package]
version="0.1.0"
edition="2024"
authors=[
    "moyulao",
]
license="MIT"

[workspace.dependencies]
tokio={ version="1.0", features=[
    "io-std",
    "io-util",
    "process",
    "sync",
    "macros",
    "rt",
    "rt-multi-thread",
    "time",
] }
tracing="0.1"
tracing-subscriber={ version="0.3.23", features=[
    "fmt",
    "env-filter",
] }
serde={ version="1.0", features=[
    "derive",
] }
serde_json="1.0"
thiserror="2.0"
anyhow="1.0"
clap={ version="4.0", features=[
    "derive",
] }
axum="0.8"
reqwest={ version="0.13", features=[
    "json",
] }
criterion="0.5"
fluent-uri="0.4.1"
dashmap="6.1.0"
futures-lite="2.6.1"

multilspy-protocol={ path="multilspy-protocol" }
multispy-rust     ={ path="multilspy-rust" }
