[package]
name = "multilspy-benches"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
multilspy-rust = { path = "../multilspy-rust" }
multilspy-protocol = { path = "../multilspy-protocol" }
criterion = { workspace = true }
tokio = { workspace = true }

[[bench]]
name = "benchmark"
harness = false
