[package]
name = "multilspy-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "ra-lsp"
path = "src/main.rs"

[dependencies]
tokio.workspace              = true
serde.workspace              = true
serde_json.workspace         = true
anyhow.workspace             = true
clap.workspace               = true
tracing.workspace            = true
tracing-subscriber.workspace = true
axum.workspace               = true
reqwest.workspace            = true

multilspy-rust.workspace     = true
multilspy-protocol.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
rayon.workspace = true
