[package]
name             ="multilspy-rust"
version.workspace=true
edition.workspace=true
authors.workspace=true
license.workspace=true

[dependencies]
tokio.workspace     =true
serde.workspace     =true
serde_json.workspace=true
thiserror.workspace =true
anyhow.workspace    =true
tracing.workspace   =true
fluent-uri.workspace=true

multilspy-protocol.workspace=true
dashmap.workspace           =true
futures-lite.workspace      =true

[dev-dependencies]
tracing-subscriber.workspace=true
tokio.workspace             =true
multilspy-protocol.workspace=true
